--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   record: ^5.2.0
   just_audio: ^0.9.42
   logger: ^2.5.0
+  flutter_audio_waveforms: ^1.2.1+8
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
